# ai_copilot_api_call_server

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/api/v1/routes/: company_routes.py  forward.py  history_routes.py
app/core/: config.py
app/db/: database.py  init_db.py  session.py
app/models/: company.py  history.py
app/ocr_utils/: config.py  ocr_results.py  parse_ocr_results.py
app/schemas/: forward.py  history.py
app/services/: companyService.py  historyService.py
app/ws/: manager.py  routes.py  state.py
